package pl.usos2.client;

public enum UserRole {
    STUDENT, LECTURER, ADMIN
}