WHENEVER SQLERROR EXIT SQL.SQLCODE

CREATE TABLE roles (
    role_id NUMBER(19) GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    role_code VARCHAR2(30) NOT NULL UNIQUE,
    role_name VARCHAR2(100) NOT NULL
);

CREATE TABLE users (
    user_id NUMBER(19) GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    first_name VARCHAR2(100) NOT NULL,
    last_name VARCHAR2(100) NOT NULL,
    email VARCHAR2(320) NOT NULL UNIQUE,
    password_hash VARCHAR2(255) NOT NULL,
    role_id NUMBER(19) NOT NULL,
    active_flag CHAR(1) DEFAULT 'Y' NOT NULL,
    created_at TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
    CONSTRAINT fk_users_role FOREIGN KEY (role_id) REFERENCES roles (role_id),
    CONSTRAINT ck_users_active_flag CHECK (active_flag IN ('Y', 'N'))
);

CREATE TABLE students (
    student_id NUMBER(19) PRIMARY KEY,
    student_number VARCHAR2(30) NOT NULL UNIQUE,
    field_of_study VARCHAR2(120) NOT NULL,
    semester VARCHAR2(20) NOT NULL,
    CONSTRAINT fk_students_user FOREIGN KEY (student_id) REFERENCES users (user_id) ON DELETE CASCADE,
    CONSTRAINT ck_students_semester CHECK (semester IN (
        'FIRST', 'SECOND', 'THIRD', 'FOURTH', 'FIFTH', 'SIXTH', 'SEVENTH'
    ))
);

CREATE TABLE employees (
    employee_id NUMBER(19) PRIMARY KEY,
    employee_number VARCHAR2(30) NOT NULL UNIQUE,
    position_title VARCHAR2(100) NOT NULL,
    salary NUMBER(12,2) NOT NULL,
    CONSTRAINT fk_employees_user FOREIGN KEY (employee_id) REFERENCES users (user_id) ON DELETE CASCADE,
    CONSTRAINT ck_employees_salary CHECK (salary > 0)
);

CREATE TABLE lecturers (
    lecturer_id NUMBER(19) PRIMARY KEY,
    academic_title VARCHAR2(50) NOT NULL,
    CONSTRAINT fk_lecturers_employee FOREIGN KEY (lecturer_id) REFERENCES employees (employee_id) ON DELETE CASCADE
);

CREATE TABLE admins (
    admin_id NUMBER(19) PRIMARY KEY,
    CONSTRAINT fk_admins_employee FOREIGN KEY (admin_id) REFERENCES employees (employee_id) ON DELETE CASCADE
);

CREATE TABLE subjects (
    subject_id NUMBER(19) GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    subject_name VARCHAR2(200) NOT NULL,
    subject_code VARCHAR2(30) NOT NULL UNIQUE,
    ects NUMBER(2) NOT NULL,
    lecturer_id NUMBER(19) NOT NULL,
    CONSTRAINT fk_subjects_lecturer FOREIGN KEY (lecturer_id) REFERENCES lecturers (lecturer_id),
    CONSTRAINT ck_subjects_ects CHECK (ects > 0)
);

CREATE TABLE course_groups (
    group_id NUMBER(19) GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    group_name VARCHAR2(120) NOT NULL,
    subject_id NUMBER(19) NOT NULL,
    lecturer_id NUMBER(19) NOT NULL,
    CONSTRAINT fk_groups_subject FOREIGN KEY (subject_id) REFERENCES subjects (subject_id),
    CONSTRAINT fk_groups_lecturer FOREIGN KEY (lecturer_id) REFERENCES lecturers (lecturer_id)
);

CREATE TABLE enrollments (
    enrollment_id NUMBER(19) GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    student_id NUMBER(19) NOT NULL,
    group_id NUMBER(19) NOT NULL,
    enrolled_at TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
    active_flag CHAR(1) DEFAULT 'Y' NOT NULL,
    CONSTRAINT fk_enrollments_student FOREIGN KEY (student_id) REFERENCES students (student_id) ON DELETE CASCADE,
    CONSTRAINT fk_enrollments_group FOREIGN KEY (group_id) REFERENCES course_groups (group_id) ON DELETE CASCADE,
    CONSTRAINT uq_enrollments_student_group UNIQUE (student_id, group_id),
    CONSTRAINT ck_enrollments_active_flag CHECK (active_flag IN ('Y', 'N'))
);

CREATE TABLE grades (
    grade_id NUMBER(19) GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    student_id NUMBER(19) NOT NULL,
    subject_id NUMBER(19) NOT NULL,
    lecturer_id NUMBER(19) NOT NULL,
    grade_value NUMBER(2,1) NOT NULL,
    description VARCHAR2(300) NOT NULL,
    created_at TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
    CONSTRAINT fk_grades_student FOREIGN KEY (student_id) REFERENCES students (student_id) ON DELETE CASCADE,
    CONSTRAINT fk_grades_subject FOREIGN KEY (subject_id) REFERENCES subjects (subject_id),
    CONSTRAINT fk_grades_lecturer FOREIGN KEY (lecturer_id) REFERENCES lecturers (lecturer_id),
    CONSTRAINT ck_grades_value CHECK (grade_value BETWEEN 2.0 AND 5.0)
);

CREATE TABLE payments (
    payment_id NUMBER(19) GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    student_id NUMBER(19) NOT NULL,
    amount NUMBER(12,2) NOT NULL,
    title VARCHAR2(300) NOT NULL,
    paid_flag CHAR(1) DEFAULT 'N' NOT NULL,
    due_date DATE NOT NULL,
    created_at TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
    CONSTRAINT fk_payments_student FOREIGN KEY (student_id) REFERENCES students (student_id) ON DELETE CASCADE,
    CONSTRAINT ck_payments_amount CHECK (amount > 0),
    CONSTRAINT ck_payments_paid_flag CHECK (paid_flag IN ('Y', 'N'))
);

CREATE TABLE applications (
    application_id NUMBER(19) GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    student_id NUMBER(19) NOT NULL,
    application_type VARCHAR2(30) NOT NULL,
    content VARCHAR2(2000) NOT NULL,
    status VARCHAR2(30) NOT NULL,
    created_at TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
    CONSTRAINT fk_applications_student FOREIGN KEY (student_id) REFERENCES students (student_id) ON DELETE CASCADE,
    CONSTRAINT ck_applications_type CHECK (application_type IN ('SCHOLARSHIP', 'LEAVE', 'CERTIFICATE', 'OTHER')),
    CONSTRAINT ck_applications_status CHECK (status IN ('SUBMITTED', 'IN_REVIEW', 'APPROVED', 'REJECTED'))
);

CREATE TABLE messages (
    message_id NUMBER(19) GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    sender_user_id NUMBER(19) NOT NULL,
    recipient_user_id NUMBER(19) NOT NULL,
    subject VARCHAR2(300) NOT NULL,
    content VARCHAR2(2000) NOT NULL,
    sent_at TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
    status VARCHAR2(20) DEFAULT 'SENT' NOT NULL,
    CONSTRAINT fk_messages_sender FOREIGN KEY (sender_user_id) REFERENCES users (user_id) ON DELETE CASCADE,
    CONSTRAINT fk_messages_recipient FOREIGN KEY (recipient_user_id) REFERENCES users (user_id) ON DELETE CASCADE,
    CONSTRAINT ck_messages_status CHECK (status IN ('SENT', 'READ')),
    CONSTRAINT ck_messages_sender_recipient CHECK (sender_user_id <> recipient_user_id)
);

CREATE TABLE resources (
    resource_id NUMBER(19) GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    resource_code VARCHAR2(30) NOT NULL UNIQUE,
    resource_name VARCHAR2(200) NOT NULL,
    category VARCHAR2(80) NOT NULL,
    total_quantity NUMBER(6) DEFAULT 1 NOT NULL,
    available_flag CHAR(1) DEFAULT 'Y' NOT NULL,
    created_at TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
    CONSTRAINT ck_resources_total_quantity CHECK (total_quantity > 0),
    CONSTRAINT ck_resources_available_flag CHECK (available_flag IN ('Y', 'N'))
);

CREATE TABLE loans (
    loan_id NUMBER(19) GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    resource_id NUMBER(19) NOT NULL,
    borrower_user_id NUMBER(19) NOT NULL,
    loan_date DATE NOT NULL,
    due_date DATE NOT NULL,
    return_date DATE,
    returned_flag CHAR(1) DEFAULT 'N' NOT NULL,
    CONSTRAINT fk_loans_resource FOREIGN KEY (resource_id) REFERENCES resources (resource_id),
    CONSTRAINT fk_loans_borrower FOREIGN KEY (borrower_user_id) REFERENCES users (user_id) ON DELETE CASCADE,
    CONSTRAINT ck_loans_returned_flag CHECK (returned_flag IN ('Y', 'N')),
    CONSTRAINT ck_loans_due_after_loan CHECK (due_date >= loan_date),
    CONSTRAINT ck_loans_return_date CHECK (return_date IS NULL OR return_date >= loan_date)
);

CREATE TABLE service_tickets (
    ticket_id NUMBER(19) GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    reporter_user_id NUMBER(19) NOT NULL,
    title VARCHAR2(300) NOT NULL,
    description VARCHAR2(2000) NOT NULL,
    status VARCHAR2(30) DEFAULT 'OPEN' NOT NULL,
    created_at TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
    assigned_admin_id NUMBER(19),
    CONSTRAINT fk_tickets_reporter FOREIGN KEY (reporter_user_id) REFERENCES users (user_id) ON DELETE CASCADE,
    CONSTRAINT fk_tickets_admin FOREIGN KEY (assigned_admin_id) REFERENCES admins (admin_id) ON DELETE SET NULL,
    CONSTRAINT ck_tickets_status CHECK (status IN ('OPEN', 'IN_PROGRESS', 'CLOSED'))
);

CREATE TABLE audit_logs (
    audit_log_id NUMBER(19) GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id NUMBER(19),
    action_name VARCHAR2(120) NOT NULL,
    entity_name VARCHAR2(120),
    entity_id NUMBER(19),
    action_details VARCHAR2(2000),
    created_at TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
    CONSTRAINT fk_audit_user FOREIGN KEY (user_id) REFERENCES users (user_id) ON DELETE SET NULL
);

