package pl.usos2.server.model.enumtype;

public enum MessageStatus
{
    SENT,
    READ
}