package pl.usos2.server.model.enumtype;

public enum RequestStatus
{
    SUBMITTED,
    IN_REVIEW,
    APPROVED,
    REJECTED,
}