package pl.usos2.server.model.enumtype;

public enum RequestType
{
    SCHOLARSHIP,
    LEAVE,
    CERTIFICATE,
    OTHER
}