package pl.usos2.server.model.enumtype;

public enum Semester
{
    FIRST,
    SECOND,
    THIRD,
    FOURTH,
    FIFTH,
    SIXTH,
    SEVENTH,
}