package pl.usos2.server.model.enumtype;

public enum ServiceTicketStatus
{
    OPEN,
    IN_PROGRESS,
    CLOSED,
}